<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/weather_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="72sp"
            tools:text="@string/Degrees" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="@string/Description" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="100dp"
            android:layout_height="100dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="16dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/location_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".85"
            android:backgroundTint="@color/white"
            android:hint="@string/weather_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/transparentWhite"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight=".10"
            android:background="@drawable/rectangle_for_button"
            android:onClick="searchWeather"
            android:text="@string/ButtonSearch"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>


</FrameLayout>